@@ -1,3 +1,10 @@
+2011-09-05  Kan-Ru Chen  <kanru@kanru.info>
+
+	* nnir.el (nnir-compose-result): Fix matching of server type.
+	(nnir-run-swish++): Ditto.
+	(nnir-run-namazu): Ditto.
+	(nnir-run-notmuch): Ditto.
+
 2011-09-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus.el (gnus-home-directory): Add warning about setting in .gnus.el
